# university-db-cli-tool

./: README.md  pyproject.toml
raw_sql_analytics/: create_db.py  create_db.sql  execute_query.py  seed_raw.py
raw_sql_analytics/sql_queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_extra_1.sql  query_extra_2.sql
university_cli/: .env.example  CRUD_helper.py  db_config.py  docker-compose.yaml  models.py  my_select.py  seed_orm.py
university_cli/alembic/: env.py
university_cli/alembic/versions/: 776b295e37b4_init_tables.py  93f629f8f7fa_change_column_type_for_cteated_at.py
