[project]
name = "university-db-cli-tool"
version = "0.1.0"
description = "CLI application to interact with university database using SQLAlchemy and Alembic"
authors = [
    {name = "Khrystyna Oliinyk",email = "khrystynaa.ol@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "faker (>=40.23.0,<41.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false